--- a/style.css
+++ b/style.css
@@ -55,6 +55,14 @@ body {
   font-size: 32px;
 }
 
+#conversion {
+  padding: 10px;
+  font-size: 12px;
+  border-radius: 10px;
+  color: white;
+  background-color: black;
+}
+
 @media (min-width: 0px) and (max-width: 500px) {
   .wrapper {
     width: 350px;
@@ -102,6 +110,13 @@ body {
     color: white;
     margin-top: 15px;
     font-size: 32px;
+  }
+  #conversion {
+    padding: 10px;
+    font-size: 12px;
+    border-radius: 10px;
+    color: white;
+    background-color: black;
   }
 }
 
@@ -153,6 +168,13 @@ body {
     margin-top: 15px;
     font-size: 32px;
   }
+  #conversion {
+    padding: 10px;
+    font-size: 12px;
+    border-radius: 10px;
+    color: white;
+    background-color: black;
+  }
 }
 
 @media (min-width: 0px) and (max-width: 320px) {
@@ -202,5 +224,12 @@ body {
     color: white;
     margin-top: 15px;
     font-size: 32px;
+  }
+  #conversion {
+    padding: 10px;
+    font-size: 12px;
+    border-radius: 10px;
+    color: white;
+    background-color: black;
   }
 }
