--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-  background-color: bisque;
+  background-color: blue;
 }
 
 .wrapper {
@@ -233,3 +233,4 @@ body {
     background-color: black;
   }
 }
+
